fix: Rmarks overflowing when too big

--- a/src/styles/components/printable-components/part-tag.scss
+++ b/src/styles/components/printable-components/part-tag.scss
@@ -67,6 +67,7 @@
     line-height: 4.5rem;
     font-size: 50px;
     margin-left: 0.7rem;
+    max-height: 31.2rem;
   }
 
   &__bottom-row {
